tests/baselines/reference/functionCall18(strict=true).errors.txt
functionCall18.ts(2,18): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
functionCall18.ts(3,18): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
functionCall18.ts(4,1): error TS2554: Expected 2 arguments, but got 1.


==== functionCall18.ts (3 errors) ====
    // Repro from #26835
    declare function foo<T>(a: T, b: T);
                     ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    declare function foo(a: {});
                     ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    foo<string>("hello");
    ~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 functionCall18.ts:2:31: An argument for 'b' was not provided.
    